fix: welcome on mobile

--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -39,7 +39,7 @@
   @media (max-width: 420px) {
     margin: 0 auto 72px auto;
     background-size: auto 50%;
-    padding-top: 14.35rem;
+    padding-top: 12.35rem;
   }
 }
 
