--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $border-width: 0;
 $border-radius: 12px;
 
 // components
-$bonus-details-button-mobile-width: 051px;
+$bonus-details-button-mobile-width: 205px;
 
 // font weights
 $font-weight-regular: 500;
